- The third person brushing animation is now smooth
- Items now smoothly inch out of suspicious blocks
- Particles are now created when a brush is moving backwards
- A softer sound is now played when a brush is moving backwards
- Revamped the distribution of pottery sherds
    - Angler Pottery Sherd -> Warm Ocean Ruins (No Change)
    - Archer Pottery Sherd -> Desert Pyramid (No Change)
    - Arms Up Pottery Sherd -> Desert Well (No Change)
    - Bait Pottery Sherd -> Warm Ocean Ruins
    - Blade Pottery Sherd -> Ruins
    - Bloom Pottery Sherd -> Jungle Ruins
    - Bolt Pottery Sherd -> Jungle Ruins
    - Brewer Pottery Sherd -> Desert Well (No Change)
    - Bullseye Pottery Sherd -> Catacombs
    - Burn Pottery Sherd -> Badlands Ruins
    - Cluck Pottery Sherd -> Savanna Ruins
    - Crawl Pottery Sherd -> Savanna Ruins
    - Crescent Pottery Sherd -> Trail Ruins
    - Cultivator Pottery Sherd -> Ruins
    - Danger Pottery Sherd -> Desert Ruins
    - Drought Pottery Sherd -> Badlands Ruins
    - Eye Pottery Sherd -> Catacombs
    - Explorer Pottery Sherd -> Cold Ocean Ruins (No Change)
    - Focus Pottery Sherd -> Cold Ocean Ruins
    - Friend Pottery Sherd -> Trail Ruins (No Change)
    - Heart Pottery Sherd -> Trail Ruins (No Change)
    - Heartbreak Pottery Sherd -> Trail Ruins (No Change)
    - Height Pottery Sherd -> Deepslate Ruins
    - Howl Pottery Sherd -> Trail Ruins (No Change)
    - Hump Pottery Sherd -> Desert Ruins
    - Illuminator Pottery Sherd -> Deepslate Ruins
    - Incidence Pottery Sherd -> Cold Ocean Ruins
    - Lumber Pottery Sherd -> Ruins
    - Miner Pottery Sherd -> Deepslate Ruins
    - Mourner Pottery Sherd -> Deepslate Ruins
    - Navigator Pottery Sherd -> Jungle Ruins
    - Needles Pottery Sherd -> Desert Ruins
    - Omen Pottery Sherd -> Catacombs
    - Plenty Pottery Sherd -> Catacombs
    - Plume Pottery Sherd -> Savanna Ruins
    - Prize Pottery Sherd -> Desert Pyramid (No Change)
    - Protection Pottery Sherd -> Trail Ruins