@@ -4,6 +4,7 @@
     "trailiertales:bloom_pottery_sherd",
     "trailiertales:bolt_pottery_sherd",
     "trailiertales:bullseye_pottery_sherd",
+    "trailiertales:carrier_pottery_sherd",
     "trailiertales:cluck_pottery_sherd",
     "trailiertales:crawl_pottery_sherd",
     "trailiertales:crescent_pottery_sherd",
