@@ -8,6 +8,7 @@ import net.frozenblock.trailiertales.tag.TTStructureTags;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootPool;
@@ -15,7 +16,9 @@ import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.ExplorationMapFunction;
 import net.minecraft.world.level.storage.loot.functions.SetNameFunction;
+import net.minecraft.world.level.storage.loot.functions.SetStewEffectFunction;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.minecraft.world.level.storage.loot.providers.number.UniformGenerator;
 import org.jetbrains.annotations.NotNull;
 
 public class TTLootTables {
@@ -113,7 +116,9 @@ public class TTLootTables {
 					).build();
 			} else if (BuiltInLootTables.DESERT_PYRAMID_ARCHAEOLOGY.equals(key)) {
 				// Removed Miner
+				// Removed Skull
 				// Added Spade
+				// Added Carrier
 				return LootTable.lootTable()
 					.withPool(
 						LootPool.lootPool()
@@ -121,11 +126,36 @@ public class TTLootTables {
 							.add(LootItem.lootTableItem(Items.ARCHER_POTTERY_SHERD))
 							.add(LootItem.lootTableItem(TTItems.SPADE_POTTERY_SHERD))
 							.add(LootItem.lootTableItem(Items.PRIZE_POTTERY_SHERD))
-							.add(LootItem.lootTableItem(Items.SKULL_POTTERY_SHERD)) //PLEASE REPLACE
+							.add(LootItem.lootTableItem(Items.ARMS_UP_POTTERY_SHERD))
 							.add(LootItem.lootTableItem(Items.DIAMOND))
 							.add(LootItem.lootTableItem(Items.TNT))
 							.add(LootItem.lootTableItem(Items.GUNPOWDER))
 							.add(LootItem.lootTableItem(Items.EMERALD))
+					).build();
+			} else if (BuiltInLootTables.DESERT_WELL_ARCHAEOLOGY.equals(key)) {
+				// Removed Arms Up
+				// Added Carrier
+				return LootTable.lootTable()
+					.withPool(
+						LootPool.lootPool()
+							.setRolls(ConstantValue.exactly(1F))
+							.add(LootItem.lootTableItem(TTItems.CARRIER_POTTERY_SHERD).setWeight(2))
+							.add(LootItem.lootTableItem(Items.BREWER_POTTERY_SHERD).setWeight(2))
+							.add(LootItem.lootTableItem(Items.BRICK))
+							.add(LootItem.lootTableItem(Items.EMERALD))
+							.add(LootItem.lootTableItem(Items.STICK))
+							.add(
+								LootItem.lootTableItem(Items.SUSPICIOUS_STEW)
+									.apply(
+										SetStewEffectFunction.stewEffect()
+											.withEffect(MobEffects.NIGHT_VISION, UniformGenerator.between(7.0F, 10.0F))
+											.withEffect(MobEffects.JUMP, UniformGenerator.between(7.0F, 10.0F))
+											.withEffect(MobEffects.WEAKNESS, UniformGenerator.between(6.0F, 8.0F))
+											.withEffect(MobEffects.BLINDNESS, UniformGenerator.between(5.0F, 7.0F))
+											.withEffect(MobEffects.POISON, UniformGenerator.between(10.0F, 20.0F))
+											.withEffect(MobEffects.SATURATION, UniformGenerator.between(7.0F, 10.0F))
+									)
+							)
 					).build();
 			}
 
