@@ -37,7 +37,7 @@
       "net.frozenblock.trailiertales.datagen.TTDataGenerator"
     ],
     "frozenlib:decorated_pot_patterns": [
-      "net.frozenblock.trailiertales.sherd.TTDecoratedPotPatternRegistry"
+      "net.frozenblock.trailiertales.registry.TTDecoratedPotPatternRegistry"
     ]
   },
   "mixins": [
